--- a/snaw-frontend/public/index.html
+++ b/snaw-frontend/public/index.html
@@ -27,7 +27,9 @@
     <title>Soundscape Noise Analysis Workbench</title>
 
     <!-- Window.token will hold the message passed by the Flask back-end -->
-    <script>window.token = "{{message}}"</script>
+    <script>window.token = "{{message}}"
+            window.array = "{{array}}"
+    </script>
 
   </head>
   <body>
