Index.html updated to receive an array from Flask

--- a/snaw-frontend/public/index.html
+++ b/snaw-frontend/public/index.html
@@ -30,9 +30,9 @@
 
 
     <!--
-      -- This script specifically receives information from Flask.
-      -- receiving a the message string variable, and an array variable
-      -->
+      This script specifically receives information from Flask.
+      receiving a the message string variable, and an array variable
+     -->
     <script>
 
     window.token = "{{message}}"
