added more flask items

--- a/snaw-frontend/public/index.html
+++ b/snaw-frontend/public/index.html
@@ -38,6 +38,12 @@
     window.token = "{{message}}"
 
     window.array = {{array}}
+
+    window.test = "{{testOutput}}"
+
+    window.spectroImg = "{{spectroImg}}"
+
+    window.analysisImg = "{{analysisImg}}"
     </script>
 
   </head>
